portfolio/src/main/webapp/style.css
* {
    margin:0;
    padding:0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
    background-color: #111;
    color: white;
}

.navbar {
    overflow: hidden;
    padding: 50px 0px 0px 75px;
}

.navbar a {
    float: left;
    text-align: center;
    padding: 15px;
    text-decoration: none;
    color: rgb(224, 46, 106);
    font-weight: 900;
    font-size: 24px;
}

.navbar a:hover,a.active {
    color: salmon;
}

#home {
    position: relative;
    box-sizing: border-box;
    min-height: 80vh;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

#home a {
    position: relative;
    text-decoration: none;
    background-color: salmon;
    display: inline-block;
    margin: 25px 0px 0px 0px;
    padding: 10px;
    border-radius: 5px;
}

#home h1 {
    font-size: 72px;
    font-weight: 1000;
    padding-bottom: 15px;
    color: pink;
}

#home h2 {
    font-size: 56px;
    font-weight: 1000;
    padding-bottom: 20px;
}

#home h3 {
    font-size: 48px;
    font-weight: 1000;
}

#about {
    position: relative;
    align-items: center;
    display: flex;
    padding: 100px;
    min-height: 75vh;
}

#about img {
    max-width: 300px;
    border-radius: 50%;
    margin-left: 150px;
    margin-right: 50px;
}

#about h2 {
    font-size: 50px;
    font-weight: 1000;
    color: pink;
}

#about p {
    font-size: 18px;
    font-weight: 1000;
}

#about button {
    font-size: 18px;
    font-weight: 1000;
    background-color: salmon;
    display: inline-block;
    margin: 25px 0px 0px 0px;
    padding: 10px;
}

#fact-container {
    margin-top: 20px;
}

#exp {
    position: relative;
    padding: 100px;
    min-height: 75vh;
}

#exp h2 {
    font-size: 50px;
    font-weight: 1000;
    padding-right: 100px;
    padding-bottom: 100px;
    color: pink;
}

.experience {
    float: left;
    width: 25%;
    padding: 10px;
    border: 3px solid salmon;
    border-radius: 5px;
    margin: 10px;
}

.experience h3 {
    font-size: 24px;
    font-weight: 1000;
    text-align: center;
    color: white;
}

.experience img{
    display: block;
    margin: auto;
}

.experience img:hover{
    opacity: 0.8;
}

#projects {
    display: flex;
    padding: 100px 100px 0px 100px;
    position: relative;
}

#projects h2 {
    font-size: 50px;
    font-weight: 1000;
    color: pink;
}

#projects.myProj img {
    padding: 10px;
    display: block;
    margin-left: auto;
    margin-right: auto;
}

#contact {
    position: relative;
    padding: 100px;
    min-height: 75vh;
}

#contact h2 {
    font-size: 50px;
    font-weight: 1000;
    color: pink;
    padding-bottom: 20px;
}

#contact.contact-info {
    margin: auto;
    width: 50%;
}

.icons {
    padding: 25px;
    float:left;
}

.icons img {
    border-radius: 50%;
    width: 50px;
    height: 50px;
}

